You need to sign in or sign up before continuing.
Service Discovery Search is broken
Issue in the Selector and Playlist querying...
See with ivoire
Issue in the Selector and Playlist querying...
See with ivoire
added Component::Interface: Qt Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %2.0.0 bugs
commit d1902eb8 Author: Jean-Baptiste Kempf jb@videolan.org Date: Wed Jan 11 18:42:09 2012 +0100
Qt4: restore search in SD
Close [#5545](https://code.videolan.org/videolan/vlc/-/issues/5545)
Original author: jb@videolan.org
added Status::fixed label
closed
VideoLAN code repository instance