Qt4: restore search in SD

Close #5545